.57 front, first window, welcome window, start game window with correctly aligns

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -245,13 +245,13 @@ p {
 
 .welcome-elements {
   /* background-color: seagreen; */
-  height: 22rem;
+  height: 25rem;
   display: flex;
   flex-direction: column;
   /* justify-content: space-between; */
   /* text-align: center; */
   align-items: center;
-  max-width: 30rem;
+  max-width: 32rem;
 }
 
 .continue-button,
